# EchoVault

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  flake.nix  justfile
apps/server/: Cargo.toml
apps/server/src/: config.rs  main.rs  telemetry.rs
apps/server/src/api/: mod.rs
apps/server/src/auth/: dpop.rs  mod.rs  routes.rs  tokens.rs
apps/server/src/db/: mod.rs
apps/server/src/sql/migrations/0001_init/: down.sql  up.sql
docs/: WHY_NOT_SUBSONIC.md
