[package]
name = "echovault-server"
version = "0.0.1"
edition = "2021"
description = "EchoVault core server"
authors = ["EchoVault Contributors"]
license = "Apache-2.0"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "macros"] }
jsonwebtoken = "9"
base64 = "0.22"
sha2 = "0.10"
parking_lot = "0.12"
http = "1"
# HTTP utils for tracing/middleware
tower-http = { version = "0.5", features = ["trace"] }
# SQLite (WAL) via sqlx with rustls runtime
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "uuid", "time", "macros", "migrate"] }
# Password hashing for fallback/device secrets (not for passkeys)
argon2 = "0.5"
# JWK/JWS for DPoP validation (ES256)
josekit = "0.10"
# WebAuthn scaffold (later we integrate fully)
webauthn-rs = { version = "0.5", default-features = false, features = ["danger-allow-state-serialisation"] }
# For generating refresh tokens
rand = "0.8"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
